--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,10 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment:fixed;
-    background-size: cover;
+/*    background-size: cover;*/
     background-color: #000000;
     color:#ffffff;
+	font-family: 'Yantramanav', sans-serif;
 
 }
 
@@ -68,4 +69,22 @@ input{
 	border-radius:5px;
 	color:#000000;
 	border:1px solid black;
+}
+
+#header{
+	margin-left:auto;margin-right:auto;height:150px;width:400px
+}
+
+#search{
+	padding-top:80px
+}
+
+@media only screen and (max-width: 750px) {
+    #header {
+        height:100px;
+        width:auto;
+    }
+    #search{
+    	padding-top:20px;
+    }
 }
