--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment:fixed;
-/*    background-size: cover;*/
+    background-size: cover;
     background-color: #000000;
     color:#ffffff;
 	font-family: 'Yantramanav', sans-serif;
@@ -71,6 +71,10 @@ input{
 	border:1px solid black;
 }
 
+#nextbutton{
+	width:100%;
+}
+
 #header{
 	margin-left:auto;margin-right:auto;height:150px;width:400px
 }
@@ -85,6 +89,24 @@ input{
         width:auto;
     }
     #search{
-    	padding-top:20px;
+    	padding-top:0;
     }
+}
+
+.col-sm-4:nth-child(3n+1){
+	clear:left;
+}
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    background:none;
 }
