--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ header{
 
 body{
 	text-align:center;
-	background-image: url("http://www.userlogos.org/files/backgrounds/soundofemotion/blue_holograph_gradient.jpg");
+	background-image: url("https://www.userlogos.org/files/backgrounds/soundofemotion/blue_holograph_gradient.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment:fixed;
@@ -31,7 +31,7 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity:.5;
+    opacity:.6;
     height:100px;
     width:100px;
     max-width:100%;
@@ -95,6 +95,11 @@ input{
     }
     #search{
     	padding-top:5px;
+    }
+
+    #bookmark-container{
+    	margin-left:5px;
+    	margin-right:5px;
     }
 }
 
